--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ site.lang | default: page.lang | default: 'en' }}">
   <head>
     {% include meta.html %}
     {% include css.html %}
