--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -8,7 +8,7 @@
 {% endif %}
 
 <link rel="shortcut icon" href="/static/favicon.ico?v=001">
-<link rel="alternate" href="/feed.xml" type="application/atom+xml" title="{{ site.title }}">
+{% feed_meta %}
 
 <meta name="author" content="{{ site.title }}">
 <meta name="description" content="{{ site.description }}">
