--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,14 +2,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 {% if page.url == '/' or page.url == '/index.html' %}
-  <title>{{ site.title }}</title>
+  <title>{{ site.title | escape }}</title>
 {% else %}
-  <title>{{ page.title }} — {{ site.title }}</title>
+  <title>{{ page.title | escape }} — {{ site.title | escape }}</title>
 {% endif %}
 
 <link rel="shortcut icon" href="/static/favicon.ico?v=001">
 {% feed_meta %}
 
-<meta name="author" content="{{ site.title }}">
-<meta name="description" content="{{ site.description }}">
-<meta name="keywords" content="{{ site.keywords }}">
+<meta name="author" content="{{ site.title | escape }}">
+<meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+<meta name="keywords" content="{{ site.keywords | escape }}">
